[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game/Map/Level_map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/GameScreen.gd" type="Script" id=2]
[ext_resource path="res://Game/Parking/Parking.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pickups/Point/Point.tscn" type="PackedScene" id=5]
[ext_resource path="res://Characters/Cone/Cone.tscn" type="PackedScene" id=6]
[ext_resource path="res://GUI/GUI.tscn" type="PackedScene" id=7]

[node name="GameScreen" type="Node2D"]
script = ExtResource( 2 )
Point = ExtResource( 5 )
Cone = ExtResource( 6 )

[node name="GUI" parent="." instance=ExtResource( 7 )]

[node name="Level_map" parent="." instance=ExtResource( 1 )]

[node name="Parking" parent="." instance=ExtResource( 3 )]
collision_layer = 16
collision_mask = 2147483664

[node name="Player" parent="." instance=ExtResource( 4 )]
[connection signal="update_bonus" from="." to="GUI" method="_on_update_bonus"]
[connection signal="move_left" from="GUI/Keypad/Left" to="Player" method="move_left"]
[connection signal="move_up" from="GUI/Keypad/U&D/Up" to="Player" method="move_up"]
[connection signal="move_down" from="GUI/Keypad/U&D/Down" to="Player" method="move_down"]
[connection signal="move_right" from="GUI/Keypad/Right" to="Player" method="move_right"]
[connection signal="game_over" from="Player" to="." method="_on_Player_game_over"]

[editable path="GUI"]
